--- a/index.html
+++ b/index.html
@@ -59,23 +59,23 @@
         <button type="button" class="button" data-modal-open>Замовити послугу</button>
       </section>
 
-      <section class="section container">
-        <h2 class="visually-hidden">особливості</h2>
-        <ul class="list list-specialty">
-          <li class="specialty-item">
+      <section class="specialty container">
+        <h2 class="specialty__hidden">особливості</h2>
+        <ul class="specialty__list list-specialty">
+          <li class="specialty__item">
             <div class="pic">
-              <svg class="pic-antenna" width="70px" height="70px">
+              <svg class="pic__icon" width="70px" height="70px">
                 <use href="./images/icons.svg#antenna"></use>
               </svg>
             </div>
-            <h3 class="subject">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="text">
+            <h3 class="card__title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="card__text">
               Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
             </p>
           </li>
-          <li class="specialty-item">
+          <li class="specialty__item">
             <div class="pic">
-              <svg class="pic-clock" width="70px" height="70px">
+              <svg class="pic__icon" width="70px" height="70px">
                 <use href="./images/icons.svg#clock"></use>
               </svg>
             </div>
@@ -84,18 +84,18 @@
               Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
             </p>
           </li>
-          <li class="specialty-item">
+          <li class="specialty__item">
             <div class="pic">
-              <svg class="pic-diagram" width="70px" height="70px">
+              <svg class="pic__icon" width="70px" height="70px">
                 <use href="./images/icons.svg#diagram"></use>
               </svg>
             </div>
             <h3 class="subject">ПЛАНУВАННЯ</h3>
             <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
-          <li class="specialty-item">
+          <li class="specialty__item">
             <div class="pic">
-              <svg class="pic-astronaut" width="70px" height="70px">
+              <svg class="pic__icon" width="70px" height="70px">
                 <use href="./images/icons.svg#astronaut"></use>
               </svg>
             </div>
@@ -107,21 +107,20 @@
         </ul>
       </section>
 
-      <section class="section-summary">
-        <div class="container">
+      <section class="summary container">
           <!--Чим ми займаємося-->
-          <h2 class="title-section">Чим ми займаємося</h2>
-          <ul class="list list-dignity">
-            <li class="list-item">
+          <h2 class="summary_title">Чим ми займаємося</h2>
+          <ul class="summary_list list-dignity">
+            <li class="summary_item">
               <img
                 src="./images/imgphotoone.jpg"
                 alt="photoone"
                 width="370"
                 height="294"
-                class="img"
+                class="summary_img"
               />
               <div class="headline">
-                <h3 class="list-headline">Десктопні додатки</h3>
+                <h3 class="headline__title">Десктопні додатки</h3>
               </div>
             </li>
             <li class="list-item">
@@ -149,7 +148,7 @@
               </div>
             </li>
           </ul>
-        </div>
+        
       </section>
 
       <section class="section-comands">
