--- a/index.html
+++ b/index.html
@@ -107,92 +107,89 @@
         </ul>
       </section>
 
-      <section class="section-summary">
-        <div class="container">
+      <section class="summary container">
           <!--Чим ми займаємося-->
-          <h2 class="title-section">Чим ми займаємося</h2>
-          <ul class="list list-dignity">
-            <li class="list-item">
+          <h2 class="summary__title">Чим ми займаємося</h2>
+          <ul class="summary__list list">
+            <li class="summary__item">
               <img
                 src="./images/imgphotoone.jpg"
                 alt="photoone"
                 width="370"
                 height="294"
-                class="img"
+                class="summary__img"
               />
               <div class="headline">
-                <h3 class="list-headline">Десктопні додатки</h3>
+                <h3 class="headline__list">Десктопні додатки</h3>
               </div>
             </li>
-            <li class="list-item">
+            <li class="summary__item">
               <img
                 src="./images/imgphototwo.jpg"
                 alt="phototwo"
                 width="370"
                 height="294"
-                class="img"
+                class="summary__img"
               />
               <div class="headline">
-                <h3 class="list-headline">Мобільні додатки</h3>
+                <h3 class="headline__list">Мобільні додатки</h3>
               </div>
             </li>
-            <li class="list-item">
+            <li class="summary__item">
               <img
                 src="./images/imgphotothree.jpg"
                 alt="photoone"
                 width="370"
                 height="294"
-                class="img"
+                class="summary__img"
               />
               <div class="headline">
-                <h3 class="list-headline">Дизайнерські рішення</h3>
+                <h3 class="headline__list">Дизайнерські рішення</h3>
               </div>
             </li>
           </ul>
-        </div>
       </section>
 
-      <section class="section-comands">
-        <div class="container">
+      <section class="comands container">
           <!--Наша команда-->
-          <h2 class="title-section">Наша команда</h2>
-          <ul class="list list-link">
-            <li class="list-item comand-item">
+          <h2 class="comands__title">Наша команда</h2>
+          <ul class="comands__list list">
+            <li class="comands__item">
               <img
                 src="./images/photoone.jpg"
                 alt="imgone"
                 width="270"
                 height="368"
-                class="img-list"
+                class="comands__img"
               />
               <div class="dignity">
-                <h3 class="title-list">Ігор Дем'яненко</h3>
-                <p lang="en" class="text-list">Product Designer</p>
+                <h3 class="dignity__title">Ігор Дем'яненко</h3>
+                <p lang="en" class="dignity__text">Product Designer</p>
                 <ul class="social">
                   <li>
-                    <a class="social-link" href="https://www.instagram.com/">
-                      <svg class="social-icon" width="20px" height="20px">
+                    <a class="social__link" href="https://www.instagram.com/">
+                      <svg class="social__icon" width="20px" height="20px">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
-                    <a class="social-link" href="https://twitter.com/">
-                      <svg class="social-icon" width="20px" height="20px">
+                    <a class="social__link" href="https://twitter.com/">
+                      <svg class="social__icon" width="20px" height="20px">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
-                    <a class="social-link" href="https://www.facebook.com/">
-                      <svg class="social-icon" width="20px" height="20px">
+                    <a class="social__link" href="https://www.facebook.com/">
+                      <svg class="social__icon" width="20px" height="20px">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
-                    <a class="social-link" href="https://www.linkedin.com/">
-                      <svg class="social-icon" width="20px" height="20px">
+                    <a class="social__link" href="https://www.linkedin.com/">
+                      <svg class="social__icon" width="20px" height="20px">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -200,42 +197,42 @@
                 </ul>
               </div>
             </li>
-            <li class="list-item comand-item">
+            <li class="comands__item">
               <img
                 src="./images/phototwo.jpg"
                 alt="imgtwo"
                 width="270"
                 height="368"
-                class="img-list"
+                class="comands__img"
               />
               <div class="dignity">
-                <h3 class="title-list">Ольга Рєпіна</h3>
-                <p lang="en" class="text-list">Frontend Developer</p>
+                <h3 class="dignity__title">Ольга Рєпіна</h3>
+                <p lang="en" class="dignity__text">Frontend Developer</p>
                 <ul class="social">
                   <li>
-                    <a class="social-link" href="https://www.instagram.com/">
-                      <svg class="social-icon" width="20px" height="20px">
+                    <a class="social__link" href="https://www.instagram.com/">
+                      <svg class="social__icon" width="20px" height="20px">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
-                    <a class="social-link" href="https://twitter.com/">
-                      <svg class="social-icon" width="20px" height="20px">
+                    <a class="social__link" href="https://twitter.com/">
+                      <svg class="social__icon" width="20px" height="20px">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
-                    <a class="social-link" href="https://www.facebook.com/">
-                      <svg class="social-icon" width="20px" height="20px">
+                    <a class="social__link" href="https://www.facebook.com/">
+                      <svg class="social__icon" width="20px" height="20px">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
-                    <a class="social-link" href="https://www.linkedin.com/">
-                      <svg class="social-icon" width="20px" height="20px">
+                    <a class="social__link" href="https://www.linkedin.com/">
+                      <svg class="social__icon" width="20px" height="20px">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -243,42 +240,42 @@
                 </ul>
               </div>
             </li>
-            <li class="list-item comand-item">
+            <li class="comands__item">
               <img
                 src="./images/photothree.jpg"
                 alt="imgthree"
                 width="270"
                 height="368"
-                class="img-list"
+                class="comands__img"
               />
               <div class="dignity">
-                <h3 class="title-list">Микола Тарасов</h3>
-                <p lang="en" class="text-list">Marketing</p>
+                <h3 class="dignity__title">Микола Тарасов</h3>
+                <p lang="en" class="dignity__text">Marketing</p>
                 <ul class="social">
                   <li>
-                    <a class="social-link" href="https://www.instagram.com/">
-                      <svg class="social-icon" width="20px" height="20px">
+                    <a class="social__link" href="https://www.instagram.com/">
+                      <svg class="social__icon" width="20px" height="20px">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
-                    <a class="social-link" href="https://twitter.com/">
-                      <svg class="social-icon" width="20px" height="20px">
+                    <a class="social__link" href="https://twitter.com/">
+                      <svg class="social__icon" width="20px" height="20px">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
-                    <a class="social-link" href="https://www.facebook.com/">
-                      <svg class="social-icon" width="20px" height="20px">
+                    <a class="social__link" href="https://www.facebook.com/">
+                      <svg class="social__icon" width="20px" height="20px">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
-                    <a class="social-link" href="https://www.linkedin.com/">
-                      <svg class="social-icon" width="20px" height="20px">
+                    <a class="social__link" href="https://www.linkedin.com/">
+                      <svg class="social__icon" width="20px" height="20px">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -286,42 +283,42 @@
                 </ul>
               </div>
             </li>
-            <li class="list-item comand-item">
+            <li class="comands__item">
               <img
                 src="./images/photofour.jpg"
                 alt="imgfour"
                 width="270"
                 height="368"
-                class="img-list"
+                class="comands__img"
               />
               <div class="dignity">
-                <h3 class="title-list">Михайло Єрмаков</h3>
-                <p lang="en" class="text-list">UI Designer</p>
+                <h3 class="dignity__title">Михайло Єрмаков</h3>
+                <p lang="en" class="dignity__text">UI Designer</p>
                 <ul class="social">
                   <li>
-                    <a class="social-link" href="https://www.instagram.com/">
-                      <svg class="social-icon" width="20px" height="20px">
+                    <a class="social__link" href="https://www.instagram.com/">
+                      <svg class="social__icon" width="20px" height="20px">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
-                    <a class="social-link" href="https://twitter.com/">
-                      <svg class="social-icon" width="20px" height="20px">
+                    <a class="social__link" href="https://twitter.com/">
+                      <svg class="social__icon" width="20px" height="20px">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
-                    <a class="social-link" href="https://www.facebook.com/">
-                      <svg class="social-icon" width="20px" height="20px">
+                    <a class="social__link" href="https://www.facebook.com/">
+                      <svg class="social__icon" width="20px" height="20px">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
-                    <a class="social-link" href="https://www.linkedin.com/">
-                      <svg class="social-icon" width="20px" height="20px">
+                    <a class="social__link" href="https://www.linkedin.com/">
+                      <svg class="social__icon" width="20px" height="20px">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -330,57 +327,54 @@
               </div>
             </li>
           </ul>
-        </div>
       </section>
 
-      <section class="section-client">
-        <div class="container">
-          <h2 class="title-section">Постійні клієнти</h2>
+      <section class="section__client container">
+          <h2 class="section__title">Постійні клієнти</h2>
           <ul class="client">
-            <li class="client-link">
-              <a class="client-item" href="">
-                <svg class="client-icon" width="106px" height="60px">
+            <li class="client__link">
+              <a class="client__item" href="">
+                <svg class="client__icon" width="106px" height="60px">
                   <use href="./images/icons.svg#company-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-link">
-              <a class="client-item" href="">
-                <svg class="client-icon" width="106px" height="60px">
+            <li class="client__link">
+              <a class="client__item" href="">
+                <svg class="client__icon" width="106px" height="60px">
                   <use href="./images/icons.svg#company-2"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-link">
-              <a class="client-item" href="">
-                <svg class="client-icon" width="106px" height="60px">
+            <li class="client__link">
+              <a class="client__item" href="">
+                <svg class="client__icon" width="106px" height="60px">
                   <use href="./images/icons.svg#company-3"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-link">
-              <a class="client-item" href="">
-                <svg class="client-icon" width="106px" height="60px">
+            <li class="client__link">
+              <a class="client__item" href="">
+                <svg class="client__icon" width="106px" height="60px">
                   <use href="./images/icons.svg#company-4"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-link">
-              <a class="client-item" href="">
-                <svg class="client-icon" width="106px" height="60px">
+            <li class="client__link">
+              <a class="client__item" href="">
+                <svg class="client__icon" width="106px" height="60px">
                   <use href="./images/icons.svg#company-5"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-link">
-              <a class="client-item" href="">
-                <svg class="client-icon" width="106px" height="60px">
+            <li class="client__link">
+              <a class="client__item" href="">
+                <svg class="client__icon" width="106px" height="60px">
                   <use href="./images/icons.svg#company-6"></use>
                 </svg>
               </a>
             </li>
           </ul>
-        </div>
       </section>
     </main>
 
@@ -404,28 +398,28 @@
           <ul class="social">
             <li>
               <a class="social-link-footer" href="https://www.instagram.com/">
-                <svg class="social-icon" width="20px" height="20px">
+                <svg class="social-icon-footer" width="20px" height="20px">
                   <use href="./images/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="social-link-footer" href="https://twitter.com/">
-                <svg class="social-icon" width="20px" height="20px">
+                <svg class="social-icon-footer" width="20px" height="20px">
                   <use href="./images/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="social-link-footer" href="https://www.facebook.com/">
-                <svg class="social-icon" width="20px" height="20px">
+                <svg class="social-icon-footer" width="20px" height="20px">
                   <use href="./images/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="social-link-footer" href="https://www.linkedin.com/">
-                <svg class="social-icon" width="20px" height="20px">
+                <svg class="social-icon-footer" width="20px" height="20px">
                   <use href="./images/icons.svg#linkedin"></use>
                 </svg>
               </a>
