--- a/portfolio.html
+++ b/portfolio.html
@@ -271,28 +271,28 @@
         <ul class="social">
           <li>
             <a class="social-link-footer" href="https://www.instagram.com/">
-              <svg class="social-icon" width="20px" height="20px">
+              <svg class="social-icon-footer" width="20px" height="20px">
                 <use href="./images/icons.svg#instagram"></use>
               </svg>
             </a>
           </li>
           <li>
             <a class="social-link-footer" href="https://twitter.com/">
-              <svg class="social-icon" width="20px" height="20px">
+              <svg class="social-icon-footer" width="20px" height="20px">
                 <use href="./images/icons.svg#twitter"></use>
               </svg>
             </a>
           </li>
           <li>
             <a class="social-link-footer" href="https://www.facebook.com/">
-              <svg class="social-icon" width="20px" height="20px">
+              <svg class="social-icon-footer" width="20px" height="20px">
                 <use href="./images/icons.svg#facebook"></use>
               </svg>
             </a>
           </li>
           <li>
             <a class="social-link-footer" href="https://www.linkedin.com/">
-              <svg class="social-icon" width="20px" height="20px">
+              <svg class="social-icon-footer" width="20px" height="20px">
                 <use href="./images/icons.svg#linkedin"></use>
               </svg>
             </a>
