--- a/index.html
+++ b/index.html
@@ -60,56 +60,59 @@
         <button type="button" class="button" data-modal-open>Замовити послугу</button>
       </section>
 
-      <section class="section container">
-        <h2 class="visually-hidden">особливості</h2>
-        <ul class="list list-specialty">
-          <li class="specialty-item">
-            <div class="pic">
-              <svg class="pic-antenna" width="70px" height="70px">
-                <use href="./images/icons.svg#antenna"></use>
-              </svg>
-            </div>
-            <h3 class="subject">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="text">
-              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
-            </p>
-          </li>
-          <li class="specialty-item">
-            <div class="pic">
-              <svg class="pic-clock" width="70px" height="70px">
-                <use href="./images/icons.svg#clock"></use>
-              </svg>
-            </div>
-            <h3 class="subject">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="text">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
-            </p>
-          </li>
-          <li class="specialty-item">
-            <div class="pic">
-              <svg class="pic-diagram" width="70px" height="70px">
-                <use href="./images/icons.svg#diagram"></use>
-              </svg>
-            </div>
-            <h3 class="subject">ПЛАНУВАННЯ</h3>
-            <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
-          </li>
-          <li class="specialty-item">
-            <div class="pic">
-              <svg class="pic-astronaut" width="70px" height="70px">
-                <use href="./images/icons.svg#astronaut"></use>
-              </svg>
-            </div>
-            <h3 class="subject">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="text">
-              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-            </p>
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h2 class="visually-hidden">особливості</h2>
+          <ul class="list list-specialty">
+            <li class="specialty-item">
+              <div class="pic">
+                <svg class="pic-antenna" width="70px" height="70px">
+                  <use href="./images/icons.svg#antenna"></use>
+                </svg>
+              </div>
+              <h3 class="subject">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="text">
+                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+              </p>
+            </li>
+            <li class="specialty-item">
+              <div class="pic">
+                <svg class="pic-clock" width="70px" height="70px">
+                  <use href="./images/icons.svg#clock"></use>
+                </svg>
+              </div>
+              <h3 class="subject">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="text">
+                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+              </p>
+            </li>
+            <li class="specialty-item">
+              <div class="pic">
+                <svg class="pic-diagram" width="70px" height="70px">
+                  <use href="./images/icons.svg#diagram"></use>
+                </svg>
+              </div>
+              <h3 class="subject">ПЛАНУВАННЯ</h3>
+              <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
+            </li>
+            <li class="specialty-item">
+              <div class="pic">
+                <svg class="pic-astronaut" width="70px" height="70px">
+                  <use href="./images/icons.svg#astronaut"></use>
+                </svg>
+              </div>
+              <h3 class="subject">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="text">
+                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section class="summary container">
-          <!--Чим ми займаємося-->
+      <section class="summary">
+        <!--Чим ми займаємося-->
+        <div class="container">
           <h2 class="summary__title">Чим ми займаємося</h2>
           <ul class="summary__list list">
             <li class="summary__item">
@@ -149,10 +152,12 @@
               </div>
             </li>
           </ul>
+        </div>
       </section>
 
-      <section class="comands container">
-          <!--Наша команда-->
+      <section class="comands section">
+        <!--Наша команда-->
+        <div class="container">
           <h2 class="comands__title">Наша команда</h2>
           <ul class="comands__list list">
             <li class="comands__item">
@@ -328,10 +333,12 @@
               </div>
             </li>
           </ul>
+        </div>
       </section>
 
-      <section class="section__client container">
-          <h2 class="section__title">Постійні клієнти</h2>
+      <section class="section">
+        <div class="container">
+          <h2 class="client__title">Постійні клієнти</h2>
           <ul class="client">
             <li class="client__link">
               <a class="client__item" href="">
@@ -376,6 +383,7 @@
               </a>
             </li>
           </ul>
+        </div>
       </section>
     </main>
 
@@ -387,10 +395,12 @@
           <address class="adres">
             <p class="city">м. Київ, пр-т Лесі Українки, 26</p>
             <ul class="list list-city">
-              <li>
+              <li class="list-city__item">
                 <a href="mailto:info@devstudio.com" class="link-footer">info@devstudio.com</a>
               </li>
-              <li><a href="tel:+380961111111" class="link-tel-footer">+38 096 111 11 11</a></li>
+              <li class="list-city__item">
+                <a href="tel:+380961111111" class="link-tel-footer">+38 096 111 11 11</a>
+              </li>
             </ul>
           </address>
         </div>
