--- a/portfolio.html
+++ b/portfolio.html
@@ -294,10 +294,12 @@
           <address class="adres">
             <p class="city">м. Київ, пр-т Лесі Українки, 26</p>
             <ul class="list list-city">
-              <li>
+              <li class="list-city__item">
                 <a href="mailto:info@devstudio.com" class="link-footer">info@devstudio.com</a>
               </li>
-              <li><a href="tel:+380961111111" class="link-tel-footer">+38 096 111 11 11</a></li>
+              <li class="list-city__item">
+                <a href="tel:+380961111111" class="link-tel-footer">+38 096 111 11 11</a>
+              </li>
             </ul>
           </address>
         </div>
